Clean up some changes made during kurs